src/objects/DT_Task__c.object
<CustomObject>
    <description>This object will act as a custom task object to store all tasks related to LTSS</description>
    <fields>
        <fullName>Application_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail</label>
        <referenceTo>CC_Application_Detail__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>CC_Application__c</referenceTo>
        <relationshipLabel>DT Tasks</relationshipLabel>
        <relationshipName>Task_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>DT Tasks</relationshipLabel>
        <relationshipName>DT_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DT Tasks</relationshipLabel>
        <relationshipName>LTSS_Task_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DT_Close_Date__c</fullName>
        <label>Task Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DT_Days_Task_Open__c</fullName>
        <formula>IF( ISPICKVAL( DT_Status__c , &apos;Complete&apos;) ,  LastModifiedDate  -  CreatedDate ,   TODAY() - DATEVALUE( CreatedDate )    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Task Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DT_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DT_Is_Due_Date_Passed__c</fullName>
        <formula>OR(AND(TODAY() &gt; DT_Due_Date__c, NOT(ISPICKVAL( DT_Status__c , &apos;Complete&apos;))) , AND( DATEVALUE(LastModifiedDate) &gt;  DT_Due_Date__c , ISPICKVAL( DT_Status__c , &apos;Complete&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Due Date Passed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_Master_Record_Id__c</fullName>
        <label>Master Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Open_Date__c</fullName>
        <label>Task Open Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DT_Record_Id__c</fullName>
        <label>Evaluated Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Record_Type__c</fullName>
        <label>Evaluated Record Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Rule_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To identify for which Rule version the task has been created</description>
        <label>Rule Version</label>
        <referenceTo>DT_Rule_Version__c</referenceTo>
        <relationshipName>LTSS_Task_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DT_Secondary_Identifier__c</fullName>
        <formula>IF(ISBLANK(Enrolled_Program__r.Program_Detail__c),
IF(ISBLANK(Application_Detail__r.Waiting_List_Program__c),
NULL,
Application_Detail__r.Waiting_List_Program__c),
Enrolled_Program__r.Program_Detail__c)</formula>
        <label>Secondary Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrolled_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrolled Program</label>
        <referenceTo>CC_Enrolled_Program__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DT Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>DT_Due_Date__c</columns>
        <columns>DT_Master_Record_Id__c</columns>
        <columns>DT_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Contact__c</columns>
        <columns>DT_Is_Due_Date_Passed__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LOC_Assessor_DT_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>LOC Assessor</label>
        <queue>LOC_Assessor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>